imported google fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Challenge 6</title>
 </head>
 <body>
-    
+    <main>
+        <nav>
+            <h1>CalmM5</h1>
+            font-family: 'Poppins', sans-serif;
+        </nav>
+    </main>
+   
 </body>
 </html>
