started structuring the nav

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <main>
         <nav>
             <h1>CalmM5</h1>
+            <div class="menu">
+                
+            </div>
             font-family: 'Poppins', sans-serif;
         </nav>
     </main>
