--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         <nav>
             <h1>CalmM5</h1>
             <div class="menu">
-                
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Portfoilio</a></li>
+                <li><a href="#">Blogs</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact Us</a></li>
             </div>
             font-family: 'Poppins', sans-serif;
         </nav>
