--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <nav>
-            <h1>CalmM5</h1>
+            <h1>Marytech</h1>
             <div class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Pages</a></li>
@@ -17,7 +17,9 @@
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Contact Us</a></li>
             </div>
-            font-family: 'Poppins', sans-serif;
+            <div class="button">
+                <button>Get started</button>
+            </div>
         </nav>
     </main>
    
