--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
         </nav>
 
         <section class="section1">
-            
+            <div class="desc">
+                <h1>HELLO</h1>
+                <P>I am a web designer</P>
+            </div> 
+            <div class="but">
+                <button>Get started</button>
+            </div>
         </section>
         <section class="section2">
 
