started styling the section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="section1">
             <div class="desc">
                 <h1>HELLO</h1>
-                <P>I am a web designer</P>
+                <p>I am a web designer</p>
             </div> 
             <div class="but">
                 <button>Get started</button>
