--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <section class="section1">
             <div class="desc">
-                <h1>HELLO</h1>
+                <h1>Hello</h1>
                 <p>I am a web designer</p>
             </div> 
             <div class="but">
