started structuring the second section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
             </div>
         </section>
         <section class="section2">
-
+            <div class="img">
+                <img src="/asset/computer.jpg" alt="computer">
+            </div>
+            <div class="desc1">
+                <h1>About me</h1>
+                <h2>I am a UX/UI designer and a graphic designer</h2>
+            </div>
         </section>
         <section class="section3">
 
