finish structuring the second section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
             <div class="desc1">
                 <h1>About me</h1>
                 <h2>I am a UX/UI designer and a graphic designer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Dolor tempore aliquid quod sequi, nam dicta!
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolor tempore aliquid quod sequi, nam dicta!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolor tempore aliquid quod sequi, nam dicta!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolor tempore aliquid quod sequi, nam dicta!
+                </p>
+            </div>
+            <div class="but1">
+                <button>Follow me</button>
             </div>
         </section>
         <section class="section3">
