started styling the second section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button>Get started</button>
             </div>
         </section>
-        <section class="section2">
+        <section class="section2-1">
             <div class="img">
                 <img src="/asset/computer.jpg" alt="computer">
             </div>
@@ -44,16 +44,35 @@
                  Dolor tempore aliquid quod sequi, nam dicta!
                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Dolor tempore aliquid quod sequi, nam dicta!
-                </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p><br>
+                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Dolor tempore aliquid quod sequi, nam dicta!
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Dolor tempore aliquid quod sequi, nam dicta!
                 </p>
-            </div>
-            <div class="but1">
                 <button>Follow me</button>
             </div>
+        </section>
+        <section class="section2-2">
+            <div class="img">
+                <img src="/asset/computer.jpg" alt="computer">
+            </div>
+                <h1>About me</h1>
+                <h2>I am a UX/UI designer and a graphic designer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Dolor tempore aliquid quod sequi, nam dicta!
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolor tempore aliquid quod sequi, nam dicta!
+                </p><br>
+                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolor tempore aliquid quod sequi, nam dicta!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dolor tempore aliquid quod sequi, nam dicta!
+                </p>
+                <div class="but1">
+                    <button>Follow me</button>
+                </div>
+                
         </section>
         <section class="section3">
 
